allow for cas-server prefix setting for validation attempts